--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-
-.classpath
+.buildpath
 .project
-.settings/org.eclipse.core.resources.prefs
-.settings/org.eclipse.jdt.core.prefs
-.settings/org.eclipse.m2e.core.prefs
-.settings/org.eclipse.wst.common.project.facet.core.xml
+.settings/
+META-INF/
+.externalToolBuilders/
+.classpath
+.prefs
+.metadata
+.MF
+.component
+.jsdtscope
+.container
+.name
+.launch
+.gitignore
+.checkstyle
+.externalToolBuilders/
+/target/
